--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        background-image: url("./images/secondDoor.png");
+        background-image: url("./images/chief.png");
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
